--- a/kodqr.index.html
+++ b/kodqr.index.html
@@ -7,60 +7,14 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <style>
-    
-      .qr{
-      width: 100%;
-      border-radius: 10px;
-      }
-
-      body {
-        background-color: hsl(212, 45%, 89%);
-      }
-      h1 {
-        font-size: 15px;
-        font-family: "Outfit", sans-serif;
-        color: hsl(218, 44%, 22%);
-        font-weight: 700;
-      }
-      h2 {
-        font-size: 15px;
-        font-family: "Outfit", sans-serif;
-        color: hsl(220, 15%, 55%);
-        font-weight: 400;
-      }
-      .container {
-        width: 100vw;
-        height: 100vh;
-        display: flex;
-justify-content: center;
-align-items:center;
-
-
-  }
-
-  .card {
-
-    padding: 15px;
-    background-color: white;
-    width: 20%;
-    border-radius: 20px;
-
-  }
-  .text {
-
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-  }
-
-    </style>
+   
 
 <div class="container">
 <div class="card"> 
